crates/as2_pcode/src/parser/snapshots/rascal_as2_pcode__parser__tests__printed@regular_imports.pcode.snap
---
source: crates/as2_pcode/src/parser/tests.rs
expression: "parsed.unwrap_or_else(|_| Actions::empty())"
input_file: samples/as2_pcode/regular_imports.pcode
---
ConstantPool "flash", "geom", "Point", "display", "BitmapData", "myBitmap", "myPoint", "createPoint"
DefineFunction "createPoint", 0 {
Push 5, 5, 2, constant0
GetVariable
Push constant1
GetMember
Push constant2
NewMethod
Return
}
Push constant0
GetVariable
Push constant3
GetMember
Push constant4
GetMember
Trace
Push constant0
GetVariable
Push constant1
GetMember
Push constant2
GetMember
Trace
Push constant5, 100, 100, 2, constant0
GetVariable
Push constant3
GetMember
Push constant4
NewMethod
DefineLocal
Push constant5
GetVariable
Trace
Push constant6, 20, 10, 2, constant0
GetVariable
Push constant1
GetMember
Push constant2
NewMethod
DefineLocal
Push constant6
GetVariable
Trace
Push constant0
GetVariable
Push constant3
GetMember
Push constant4
GetMember
Push constant0
GetVariable
Push constant3
GetMember
Push constant4
GetMember
Equals2
Trace
Push 0, constant7
CallFunction
Trace
