crates/as2_pcode/src/parser/snapshots/rascal_as2_pcode__parser__tests__printed@special_functions.pcode.snap
---
source: crates/as2_pcode/src/parser/tests.rs
expression: "parsed.unwrap_or_else(|_| Actions::empty())"
input_file: samples/as2_pcode/special_functions.pcode
---
ConstantPool "x", "foo", "newname", "this", "getNextHighestDepth", "http://ruffle.rs", "window", "/:$version", "url", "target", "_level12", "_level", "abc", "print:#bmax", "print:#bframe", "print:", "_root", "printasbitmap:#bmax", "printasbitmap:#bframe", "printasbitmap:", "_level123", "message", ""
Push 123
Call
Push constant0
GetVariable
AsciiToChar
Pop
Push constant0
GetVariable
GetVariable
Pop
Push constant0
GetVariable
Pop
Push constant1
GetVariable
Push constant2
Push 16384
Push 0
Push constant3
GetVariable
Push constant4
CallMethod
Add2
CloneSprite
GetTime
Pop
GetUrl "http://ruffle.rs", ""
GetUrl "http://ruffle.rs", "window"
Push constant5
Push constant6
GetUrl2 false, false, 1
Push constant7
GetVariable
Pop
GotoFrame 122
Play
GotoLabel "123"
Play
Push constant0
GetVariable
GotoFrame2 false, true
GotoFrame 122
Play
GotoLabel "123"
Play
Push constant0
GetVariable
GotoFrame2 false, true
Push constant0
GetVariable
GotoFrame2 false, true
GotoFrame 65535
Play
GotoFrame 0
Play
GotoFrame 1
Play
GotoFrame 0
Play
GotoFrame 122
GotoLabel "123"
Push constant0
GetVariable
GotoFrame2 false, false
GotoFrame 122
GotoLabel "123"
Push constant0
GetVariable
GotoFrame2 false, false
Push constant0
GetVariable
GotoFrame2 false, false
Push constant0
GetVariable
ToInteger
Pop
Push constant0
GetVariable
StringLength
Pop
Push constant8
Push constant9
GetUrl2 false, true, 0
Push constant8
Push constant9
GetUrl2 false, true, 1
GetUrl "url", "_level12"
Push constant8
Push constant10
GetUrl2 false, false, 1
Push constant8
Push constant11
Push constant0
GetVariable
StringAdd
GetUrl2 false, false, 1
Push constant8
Push constant9
GetUrl2 true, true, 0
Push constant8
Push constant0
GetVariable
GetUrl2 true, true, 0
Push constant8
Push constant9
GetUrl2 true, true, 1
Push constant8
Push constant10
GetUrl2 true, false, 0
Push constant8
Push constant10
GetUrl2 true, false, 1
Push constant8
Push constant11
Push constant0
GetVariable
StringAdd
GetUrl2 true, false, 1
Push constant0
GetVariable
MBAsciiToChar
Pop
Push constant0
GetVariable
MBStringLength
Pop
Push constant0
GetVariable
MBCharToAscii
Pop
Push constant12
Push 1
Push -1
MBStringExtract
Pop
Push constant12
Push 1
Push 2
MBStringExtract
Pop
NextFrame
GotoFrame 0
Push constant0
GetVariable
ToNumber
Pop
Push constant0
GetVariable
CharToAscii
Pop
Play
PrevFrame
GotoFrame 0
Push constant13
Push constant1
GetUrl2 false, false, 0
Push constant14
Push constant3
GetVariable
GetUrl2 false, false, 0
Push constant15
Push constant16
GetVariable
GetUrl2 false, false, 0
Push constant17
Push constant1
GetUrl2 false, false, 0
Push constant18
Push constant3
GetVariable
GetUrl2 false, false, 0
Push constant19
Push constant16
GetVariable
GetUrl2 false, false, 0
Push constant17
Push constant20
GetUrl2 false, false, 0
Push constant18
Push constant11
Push constant0
GetVariable
StringAdd
GetUrl2 false, false, 0
Push constant19
Push constant11
Push constant0
GetVariable
StringAdd
GetUrl2 false, false, 0
Push constant13
Push constant20
GetUrl2 false, false, 0
Push constant14
Push constant11
Push constant0
GetVariable
StringAdd
GetUrl2 false, false, 0
Push constant15
Push constant11
Push constant0
GetVariable
StringAdd
GetUrl2 false, false, 0
Push 123
RandomNumber
Pop
Push constant0
GetVariable
RemoveSprite
Push 0
Push 0
Push constant0
GetVariable
StartDrag
Push 0
Push 1
Push constant0
GetVariable
StartDrag
Push 0
Push 0
Push constant0
GetVariable
StartDrag
Push 1
Push 2
Push 3
Push 4
Push 1
Push 1
Push constant0
GetVariable
StartDrag
Stop
StopSounds
EndDrag
Push constant0
GetVariable
ToString
Pop
Push constant0
GetVariable
Push 1
Push -1
StringExtract
Pop
Push constant0
GetVariable
Push 1
Push 2
StringExtract
Pop
Push constant0
GetVariable
TargetPath
Pop
ToggleQuality
Push constant21
Trace
Push constant22
Push constant0
GetVariable
GetUrl2 false, true, 0
Push constant22
Push constant11
Push constant0
GetVariable
StringAdd
GetUrl2 false, false, 0
GetUrl "", "_level123"
