crates/as2_pcode/src/parser/snapshots/rascal_as2_pcode__parser__tests__printed@tell_target.pcode.snap
---
source: crates/as2_pcode/src/parser/tests.rs
expression: "parsed.unwrap_or_else(|_| Actions::empty())"
input_file: samples/as2_pcode/tell_target.pcode
---
ConstantPool "x", "this is x", "", "this is y", "this is z", "this is still y", "this is x again", "this is root", "this is still root"
Push constant0
GetVariable
SetTarget2
Push constant1
Trace
Push constant2
Push 11
GetProperty
SetTarget "y"
Push constant3
Trace
Push constant2
Push 11
GetProperty
SetTarget "z"
Push constant4
Trace
SetTarget ""
SetTarget2
Push constant5
Trace
SetTarget ""
SetTarget2
Push constant6
Trace
SetTarget ""
Push constant7
Trace
Push constant0
GetVariable
SetTarget2
SetTarget ""
Push constant8
Trace
Push constant0
GetVariable
SetTarget2
Push constant1
Trace
SetTarget ""
Push constant8
Trace
